MAGETWO-58394: [Github] magento/framework depends on zendframework/zend-stdlib but it's missing from composer.json #6442

--- a/lib/internal/Magento/Framework/composer.json
+++ b/lib/internal/Magento/Framework/composer.json
@@ -20,10 +20,12 @@
         "ext-openssl": "*",
         "lib-libxml": "*",
         "ext-xsl": "*",
-        "symfony/process": "~2.1"
+        "symfony/process": "~2.1",
+        "zendframework/zend-stdlib": "~2.4.6"
     },
     "suggest": {
-        "ext-imagick": "Use Image Magick >=3.0.0 as an optional alternative image processing library"
+        "ext-imagick": "Use Image Magick >=3.0.0 as an optional alternative image processing library",
+        "zendframework/zend-http": "Zend\\Http component"
     },
     "autoload": {
         "psr-4": {
