--- a/app/code/Magento/SalesInventory/composer.json
+++ b/app/code/Magento/SalesInventory/composer.json
@@ -4,7 +4,9 @@
     "require": {
         "php": "~5.6.0|7.0.2|7.0.4|~7.0.6",
         "module-catalog-inventory": "100.2.*",
-        "magento/module-sales": "100.2.*"
+        "magento/module-sales": "100.2.*",
+        "magento/module-store": "100.2.*",
+        "magento/module-catalog": "101.2.*"
     },
     "type": "magento2-module",
     "version": "100.2.0-dev",
